# India-Jobs

./: .gitignore  CLAUDE.md  LICENSE  Makefile  QUICKSTART.md  README.md  data.json  index.html  pyproject.toml
.github/workflows/: pages.yml  rescore.yml
data/: occupations.csv  occupations.json  scores.json
pages/: accountants.md  actors-performers.md  actuaries.md  agri-extension.md  agri-labour.md  air-traffic-controllers.md  anganwadi-workers.md  animation-vfx.md  architects.md  asha-workers.md  authors-writers.md  auto-components.md  auto-drivers.md  ayush-practitioners.md  bank-clerks.md  bar-benders.md  barbers-hairdressers.md  bartenders.md  beauticians.md  beekeepers-sericulture.md  bike-taxi-riders.md  blockchain-devs.md  bouncers.md  bpm-data-entry.md  bpm-fa.md  bpm-hr.md  bpm-medical-coding.md  bpm-transaction.md  bpm-voice.md  branch-managers.md  broadcast-engineers.md  bus-drivers.md  ca.md  cab-drivers.md  carpenters.md  cash-logistics-armed.md  cashiers.md  chefs-cooks.md  chemical-plant-operators.md  child-welfare-workers.md  (+204 more)
pipeline/: add_source_urls.py  adjust_overlaps.py  build_site_data.py  expansion_data.py  expansion_data_v2.py  make_csv.py  make_prompt.py  merge_expansion.py  merge_expansion_v2.py  process.py  score.py  scrape.py
site/: data.json  index.html
