[project]
name = "india-jobs"
version = "0.1.0"
description = "Visual exploration of India's job market and AI exposure"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "lxml>=5.0.0",
    "markdownify>=0.13.0",
    "playwright>=1.45.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]
